# spotisync

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  entrypoint.sh  taskfile.yml
.github/workflows/: ci-push-main.yml  ci-push-pr.yml  dockerhub-ci.yml
py/: core.py  spotify.py  utils.py
spotidownload/: Cargo.toml
spotidownload/src/: downloader.rs  environment.rs  main.rs  plex.rs
spotidownload/src/routes/: mod.rs  route_queue.rs  route_spotify_auth.rs  router.rs
spotisync/: Cargo.toml  auth.py  core.py  spotify.py  utils.py
spotisync/src/: main.rs
spotisync/src/spotify/: auth.rs  functions.rs  mod.rs  playlist_sync.rs
src/: main.rs  spotify.rs
src/spotify/: auth.rs  downloader.rs  functions.rs  playlist_sync.rs
